Testing preload link in header of index to attempt shortening load time for website background image. Updated about me text to align with professional need. Added bottom margin to body to prevent content sitting on bottom of page.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@ body {
   background-position: center;
   height: 500px;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 /*:root {
